fix(launcher): 保留重复的 --add-opens/--add-exports 参数，修复 PCL 启动失败